# AI-Voice-Agent

./: .gitignore  BACKEND_FLOW.md  BackEnd_Setup.md  README.md  SETUP.md  diag_eleven.py  diag_output.txt  diag_synthesis.py  quick_test.py  verify_eleven.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  worker.py
backend/app/agent/: __init__.py  graph.py  llm.py  memory.py  prompts.py  state.py
backend/app/agent/tools/: __init__.py  document_tools.py  mock_tools.py  session_tools.py
backend/app/agents/: __init__.py  catalog.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/livekit/: __init__.py  session_manager.py
backend/app/providers/: __init__.py
backend/app/providers/llm/: base.py  factory.py  openai_provider.py  openrouter_provider.py
backend/app/providers/stt/: __init__.py  assemblyai.py  base.py  deepgram.py  factory.py
backend/app/providers/tts/: base.py  cartesia.py  elevenlabs.py  factory.py
backend/app/rag/: __init__.py  embeddings.py  ingestion.py  retriever.py  schemas.py  vector_store.py
backend/app/runtime/: __init__.py  audio.py  conversation.py  events.py  session_metadata.py  worker.py
backend/app/schemas/: __init__.py  session.py
backend/app/tools/: base.py  calculator.py  current_time.py  faq.py  order_status.py  registry.py
backend/voice_engineering_poc_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md  TESTING.md
frontend/: package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  (+3 more)
(+59 files in other folders)
