[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-engineering-poc-backend"
version = "0.1.0"
description = "Browser voice AI demo backend built with FastAPI and LiveKit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "livekit>=1.0.8",
  "livekit-agents>=1.3.1",
  "openai>=1.66.0",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.34.0",
  "websockets>=15.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = true

